# basketball

./: .gitignore  CLAUDE.md  PLAN.md  README.md  RESEARCH.md  pyproject.toml  research-prompts.md
backtests/: totals_baseline_20260217_032943.json  totals_v2_20260217_040832.json
data/: team_name_crosswalk.csv
research/: 00-canada-summary.md  05-canada-exchanges.md  05-canada-tax-legal.md  05-deep-dive-ml-best-practices.md
scripts/: backtest_totals.py  backtest_totals_v2.py  build_historical.py  daily_collect.py  daily_cron.sh  paper_trade.py  scrape_barttorvik_historical.py
src/data/: barttorvik_collector.py  cbbpy_collector.py  odds_api_collector.py  sbro_loader.py
src/features/: compute.py
src/models/: evaluation.py  totals_baseline.py  totals_data.py  totals_data_v2.py  totals_v2.py  walk_forward.py  xgb_wrapper.py
src/utils/: config.py  db.py  name_match.py
tests/: test_collectors.py  test_db.py  test_features.py  test_totals_model.py  test_totals_v2.py
